# ros-pcl

./: CMakeLists.txt  package.xml  setup.py
Trainning_data/: new_data_chair.sav
include/imagecontrol/: image_process.h  processPointClouds.h  render.h
script/: point_cloud.py  recognition.py
src/: image_node.cpp  image_process.cpp  pcd_interface.cpp  pcl_tutorial.cpp  processPointClouds.cpp  render.cpp
src/imagecontrol/: features.py
srv/: GetCloud.srv
